wrote tests for contact service